--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -2,15 +2,46 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  padding: 0.5em 2em;
+  box-shadow: 0px -3px 6px 0px gray;
+}
 
-  height: 50px;
-  box-shadow: 0px -3px 18px 0px gray;
+.options_container {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  height: 100%;
 }
 
 .options_navbar {
   display: flex;
   flex-direction: row;
   gap: 1.5em;
+  
+  & a:hover {
+   text-decoration: underline;
+  }
+}
+
+
+.icons_navbar {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  justify-content: end;
+}
+
+.link_icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+}
+
+.icons {
+  width: 100%;
+  height: 100%;
 }
