--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: row;
   gap: 2em;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .link_icons {
@@ -39,9 +39,4 @@
   align-items: center;
   width: 25px;
   height: 25px;
-}
-
-.icons {
-  width: 100%;
-  height: 100%;
 }
