--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -12,12 +12,25 @@
   font-weight: 400;
 }
 
-.recover {
-  font-size: 1em;
-  text-align: right;
+.tyc {
+  margin: 5px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  gap: 6px;
+
+  & label {
+    font-size: 14px;
+    cursor: pointer;
+  }
+
+  & input {
+    cursor: pointer;
+  }
 }
 
-.recover:hover {
+.tyc:hover {
   text-decoration: underline;
 }
 
