--- a/src/app/shared/authInput.module.css
+++ b/src/app/shared/authInput.module.css
@@ -45,7 +45,7 @@
   .input {
     border: 1px solid var(--color-border-login);
     border-radius: 5px;
-    height: 30px;
-    padding: 6px;
+    height: 2.5em;
+    padding: 0px 6px;
   }
 }
