--- a/src/app/shared/authInput.module.css
+++ b/src/app/shared/authInput.module.css
@@ -40,12 +40,13 @@
 
   & label {
     font-size: large;
+    margin-left: 6px;
   }
+}
 
-  .input {
-    border: 1px solid var(--color-border-login);
-    border-radius: 5px;
-    height: 2.5em;
-    padding: 0px 6px;
-  }
+.input {
+  border: 1px solid var(--color-border-login);
+  border-radius: 5px;
+  height: 2em;
+  padding: 0px 6px;
 }
