--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -5,11 +5,13 @@
 .title_container h1 {
   font-size: 2.5rem;
   font-weight: 700;
+  color: rgb(51, 48, 48);
 }
 
 .title_container h2 {
   font-size: 1.7rem;
   font-weight: 400;
+  color: rgb(75, 75, 75);
 }
 
 .recover {
