--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -5,11 +5,13 @@
 .title_container h1 {
   font-size: 2.5rem;
   font-weight: 700;
+  color: rgb(51, 48, 48);
 }
 
 .title_container h2 {
   font-size: 1.7rem;
   font-weight: 400;
+  color: rgb(75, 75, 75);
 }
 
 .tyc {
@@ -34,7 +36,7 @@
   text-decoration: underline;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 810px) {
   .mq_container {
     flex-direction: column !important;
   }
