--- a/src/components/footer/page.module.css
+++ b/src/components/footer/page.module.css
@@ -9,12 +9,12 @@
   justify-content: center;
   padding: 1em;
   background-color: rgba(0, 0, 0, 0.2);
+}
 
-  & span {
-    font-size: 1.2em;
-    font-weight: 600;
-    color: white;
-  }
+.span_header {
+  font-size: 1.2em;
+  font-weight: 600;
+  color: white;
 }
 
 .body_container {
@@ -39,11 +39,11 @@
   flex-direction: column;
   text-align: center;
   gap: 0.4em;
+}
 
-  &>span {
-    color: white;
-    font-size: 1.1em;
-  }
+.span_text_info {
+  color: white;
+  font-size: 1.1em;
 }
 
 .networks_contact {
