--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -8,6 +8,14 @@
   box-shadow: 0px -3px 6px 0px gray;
 }
 
+.logo_principal {
+  width: 70%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .options_container {
   display: flex;
   flex-direction: column;
@@ -18,17 +26,17 @@
 .options_navbar {
   display: flex;
   flex-direction: row;
-  gap: 1.5em;
-  
-  & a:hover {
-   text-decoration: underline;
-  }
+  gap: 2em;
+}
+
+.options_navbar a:hover {
+  text-decoration: underline;
 }
 
 .icons_navbar {
   display: flex;
   flex-direction: row;
-  gap: 2em;
+  gap: 1.5em;
   justify-content: flex-end;
 }
 
