--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --color-btn-principal: rgb(70, 98, 177);
   --color-border-login: rgb(197, 194, 194);
