--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -1,49 +1,21 @@
-.navbar_container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5em 2em;
-  box-shadow: 0px -3px 6px 0px gray;
+.logo_navbar {
+  height: 70px;
 }
 
-.logo_principal {
-  width: 70%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.btn_navbar {
+  color: white;
+  width: 150px;
+  font-size: 1em;
 }
 
-.options_container {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-  height: 100%;
+.menu_toggle {
+  width: 50px;
+  padding: 10px;
+  height: 80%;
+  border-radius: 50%;
+  transition: background-color 0.3s ease-in-out;
 }
 
-.options_navbar {
-  display: flex;
-  flex-direction: row;
-  gap: 2em;
-}
-
-.options_navbar a:hover {
-  text-decoration: underline;
-}
-
-.icons_navbar {
-  display: flex;
-  flex-direction: row;
-  gap: 1.5em;
-  justify-content: flex-end;
-}
-
-.link_icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 25px;
-  height: 25px;
+.menu_toggle:hover {
+  background-color: #E4D4F4;
 }
