--- a/src/components/footer/page.module.css
+++ b/src/components/footer/page.module.css
@@ -1,54 +1,56 @@
 .footer_container {
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(135deg, var(--color-primary), var(--color-primary-hover));
-}
-
-.footer_header {
-  display: flex;
-  justify-content: center;
-  padding: 1em;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.span_header {
-  font-size: 1.2em;
-  font-weight: 600;
-  color: white;
-}
-
-.body_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding: 3em;
   width: 100%;
-  background-color: var(--color-bg-secondary-light);
-}
-
-.info_container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 1em;
-  gap: 2em;
-}
-
-.text_info {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  gap: 0.4em;
+  justify-content: center;
+  align-items: center;
+  background: #FAFAFA;
 }
 
-.span_text_info {
-  color: white;
-  font-size: 1.1em;
+.header_footer {
+  width: 100%;
+  max-width: 1536px;
+  padding: 4em 2em;
 }
 
+.footer_columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-width: 200px;
+}
+
+/* Column 1 */
+.logo_footer {
+  width: 250px;
+}
+
+/* Column 2 */
+.quick_links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.quick_links a {
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.quick_links a:hover {
+  box-shadow: inset 0 -1px 0 #180828;
+}
+
+/* Column 3 */
 .networks_contact {
   display: flex;
-  flex-direction: row;
   gap: 10px;
 }
 
@@ -58,18 +60,58 @@
 }
 
 .img:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
-@media (max-width: 768px) {
-  .body_container {
+/* =================== Section body =================== */
+
+.body_footer {
+  width: 100%;
+  padding: 0.8em 3em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: #F4F4F5;
+}
+
+.text {
+  font-size: 0.9em;
+  color: #52525B;
+}
+
+.text_body {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 0.3em;
+}
+
+.title_body {
+  font-weight: 600;
+}
+
+/* =================== Media querys =================== */
+@media (max-width: 780px) {
+  .footer_columns {
+    width: 442px;
+  }
+}
+
+@media (max-width: 515px) {
+  .footer_columns {
+    width: 100%;
     flex-direction: column;
     align-items: center;
     text-align: center;
   }
 
-  .info_container {
+  .networks_contact {
+    justify-content: center;
+  }
+
+  .text_body {
     flex-direction: column;
-    gap: 1em;
+    gap: 0em;
   }
 }
