--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,33 @@
   --color-bg-secondary-light: rgba(91, 75, 112, 0.795);
   --color-primary: #4a148c;
   --color-primary-hover: #7b1fa2;
+
+  --color-text-primary: white;
+  --color-text-secondary: #180828;
+  --color-text-third: #7828C8;
+  --color-text-opaco: #3F3F46;
+
+  --color-purple-50: #F2EAFA;
+  --color-purple-100: #E4D4F4;
+  --color-purple-200: #C9A9E9;
+  --color-purple-300: #AE7EDE;
+  --color-purple-400: #9353D3;
+  --color-purple-500: #7828C8;
+  --color-purple-600: #6020A0;
+  --color-purple-700: #481878;
+  --color-purple-800: #301050;
+  --color-purple-900: #180828;
+
+  --color-zinc-50: #FAFAFA;
+  --color-zinc-100: #F4F4F5;
+  --color-zinc-200: #E4E4E7;
+  --color-zinc-300: #D4D4D8;
+  --color-zinc-400: #A1A1AA;
+  --color-zinc-500: #71717A;
+  --color-zinc-600: #52525B;
+  --color-zinc-700: #3F3F46;
+  --color-zinc-800: #27272A;
+  --color-zinc-900: #18181B;
 }
 
 * {
