--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -1,34 +1,139 @@
-.title_container {
-  font-size: 2em;
+.container {
+  width: 100%;
+  padding: 4em;
+  background-color: var(--color-purple-50);
+  display: flex;
+  justify-content: center;
 }
 
-.title_container h1 {
+.login_container {
+  width: 100%;
+  max-width: 1170px;
+  max-height: 500px;
+  display: flex;
+  border-radius: 1.5em;
+  box-shadow: 0px 6px 12px 0px var(--color-zinc-400);
+  background-color: var(--color-purple-100);
+}
+
+.column1 img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 1em 0 0 1em;
+}
+
+.column2 {
+  max-width: 420px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  gap: 1em;
+  padding: 3em 2.5em;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+}
+
+.title p {
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--color-title-principal);
+  color: var(--color-zinc-800);
 }
 
-.title_container h2 {
-  font-size: 1.7rem;
-  font-weight: 400;
-  color: var(--color-title-secondary);
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.inputs_container {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.input_label {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+
+  & label {
+    color: var(--color-text-opaco);
+  }
+}
+
+.input {
+  border-radius: 2em;
+  height: 2.5em;
+  padding: 0px 1em;
+}
+
+.input:focus {
+  outline: none;
+  border: none;
+}
+
+.btn_navbar {
+  font-size: 1em;
 }
 
 .recover {
-  font-size: 1em;
   text-align: right;
+  color: var(--color-text-third);
 }
 
-.recover:hover {
+.p_register {
+  text-align: center;
+  color: var(--color-text-opaco);
+}
+
+.register {
+  margin-left: 5px;
+  text-align: center;
+  color: var(--color-text-third);
+}
+
+.recover:hover,
+.register:hover {
   text-decoration: underline;
+  color: var(--color-text-opaco);
 }
 
-@media (max-width: 800px) {
-  .mq_container {
-    flex-direction: column !important;
+@media (max-width: 1000px) {
+  .login_container {
+    flex-direction: column;
+    max-width: 600px;
+    max-height: 100%;
   }
 
-  .title_container {
+  .column1 img {
+    border-radius: 1em 1em 0 0;
+    height: 350px;
+  }
+
+  .column2 {
+    max-width: 100%;
+    padding: 2em 3em 3em;
+  }
+}
+
+@media (max-width: 540px) {
+  .container {
+    padding: 0em;
+  }
+
+  .p_register {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+  }
+
+  .login_container,
+  .column1 img {
+    box-shadow: none;
+    border-radius: 0em;
   }
 }
