styles: minor changes in footer and login

--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -43,12 +43,12 @@
 .title p:first-child {
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--color-zinc-800);
+  color: var(--color-text-secondary);
 }
 
 .title p:nth-child(2) {
   font-size: 1rem;
-  color: var(--color-zinc-800);
+  color: var(--color-text-secondary);
 }
 
 .form {
@@ -70,7 +70,7 @@
   gap: 2px;
 
   & label {
-    color: var(--color-text-opaco);
+    color: var(--color-text-secondary);
   }
 }
 
@@ -98,7 +98,7 @@
 
 .p_register {
   text-align: center;
-  color: var(--color-text-opaco);
+  color: var(--color-text-secondary);
 }
 
 .register {
