--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,6 @@
 @tailwind utilities;
 
 :root {
-  --color-btn-principal: rgb(70, 98, 177);
-  --color-border-login: rgb(197, 194, 194);
-  --color-title-principal: rgb(51, 48, 48);
-  --color-title-secondary: rgb(75, 75, 75);
-  --color-bg-secondary-dark: rgba(64, 16, 126, 0.767);
-  --color-bg-secondary-light: rgba(91, 75, 112, 0.795);
-  --color-primary: #4a148c;
-  --color-primary-hover: #7b1fa2;
-
   --color-text-primary: white;
   --color-text-secondary: #180828;
   --color-text-third: #7828C8;
@@ -44,7 +35,7 @@
   list-style: none;
   text-decoration: none;
   box-sizing: border-box;
-  color: black;
+  color: var(--color-text-secondary);
   padding: 0;
   margin: 0;
 }
