--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -1,21 +1,90 @@
-.title_container {
-  font-size: 2em;
+.container {
+  width: 100%;
+  min-height: 70vh;
+  padding: 4em 2em;
+  background-color: var(--color-purple-50);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.title_container h1 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  color: var(--color-title-principal);
+.register_container {
+  width: 100%;
+  max-width: 1170px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.title_container h2 {
-  font-size: 1.7rem;
-  font-weight: 400;
-  color: var(--color-title-secondary);
+.column1 img {
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+  border-radius: 1em 0 0 1em;
+}
+
+.column2 {
+  max-width: 420px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 1em;
+  padding: 2em 0em 3em 2em;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+}
+
+.title p:first-child {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.title p:nth-child(2) {
+  font-size: 1rem;
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
+}
+
+.inputs_container {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.input_label {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.input {
+  border-radius: 2em;
+  height: 2.5em;
+  padding: 0px 1em;
+}
+
+.input:focus {
+  outline: none;
+  border: none;
+}
+
+.btn_navbar {
+  font-size: 1em;
 }
 
 .tyc {
-  margin: 5px 0px;
+  width: auto;
   display: flex;
   flex-direction: row;
   justify-content: left;
@@ -33,15 +102,43 @@
 }
 
 .tyc:hover {
-  text-decoration: underline;
+  color: var(--color-text-third);
 }
 
-@media (max-width: 810px) {
-  .mq_container {
-    flex-direction: column !important;
+/* =================== Media querys =================== */
+@media (max-width: 768px) {
+  .container {
+    padding: 2em 0em;
   }
 
-  .title_container {
+  .column1 {
+    display: none;
+  }
+
+  .column2 {
+    width: 100%;
+    padding: 2em 2em 3em;
+  }
+
+  .p_login {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+  }
+
+  .register_container,
+  .column1 img {
+    box-shadow: none;
+    border-radius: 0em;
+  }
+}
+
+@media (max-width: 1050px) {
+  .column1 {
+    width: 50%;
+  }
+
+  .column1 img {
+    width: 100%;
   }
 }
