feat: create component Hero for Home

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --color-text-primary: white;
   --color-text-secondary: #180828;
   --color-text-third: #7828C8;
-  --color-text-opaco: #3F3F46;
+  --color-text-opaco: #52525B;
 
   --color-purple-50: #F2EAFA;
   --color-purple-100: #E4D4F4;
