--- a/src/components/authCallToAction/page.module.css
+++ b/src/components/authCallToAction/page.module.css
@@ -12,14 +12,14 @@
 }
 
 .auth_subtitle {
-  font-size: 1.1em;
+  font-size: 1em;
   color: var(--color-text-third);
   margin-bottom: 2em;
 }
 
 .auth_cards_container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 1.5em;
   margin: 0 auto;
 }
@@ -92,13 +92,9 @@
   font-size: clamp(0.8rem, 0.8vw + 0.8rem, 7rem);
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .auth_cards_container {
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-  }
-
-  .auth_card {
-    width: 45%;
   }
 }
