--- a/src/components/footer/page.module.css
+++ b/src/components/footer/page.module.css
@@ -9,7 +9,6 @@
 
 .header_footer {
   width: 100%;
-  max-width: 1536px;
   padding: 4em 2em;
 }
 
@@ -17,29 +16,30 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 2em;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  min-width: 200px;
+  gap: 1em;
+  min-width: 15em;
 }
 
 /* Column 1 */
 .logo_footer {
-  width: 250px;
+  max-width: 15em;
 }
 
 /* Column 2 */
 .quick_links {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.5em;
 }
 
 .quick_links a {
+  font-size: 1em;
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
@@ -49,13 +49,17 @@
 }
 
 /* Column 3 */
+.p {
+  font-size: 1em;
+}
+
 .networks_contact {
   display: flex;
-  gap: 10px;
+  gap: 0.5em;
 }
 
 .img {
-  width: 24px;
+  width: 1.5em;
   transition: transform 0.3s ease;
 }
 
@@ -91,14 +95,12 @@
   font-weight: 600;
 }
 
-/* =================== Media querys =================== */
-@media (max-width: 780px) {
-  .footer_columns {
-    width: 442px;
-  }
+:is(.footer_container) {
+  font-size: clamp(0.8rem, 0.8vw + 0.8rem, 7rem);
 }
 
-@media (max-width: 515px) {
+/* =================== Media querys =================== */
+@media (max-width: 768px) {
   .footer_columns {
     width: 100%;
     flex-direction: column;
