--- a/src/app/(auth)/login/page.module.css
+++ b/src/app/(auth)/login/page.module.css
@@ -1,38 +1,9 @@
-.container {
-  width: 100%;
-  min-height: 70vh;
-  padding: 4em 2em;
-  background-color: var(--color-purple-50);
+.login_section {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.login_container {
-  width: 100%;
-  max-width: 1170px;
-  max-height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.column1 img {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
-  border-radius: 1em 0 0 1em;
-}
-
-.column2 {
-  max-width: 420px;
-  display: flex;
-  flex-grow: 1;
   flex-direction: column;
   justify-content: center;
   align-items: start;
   gap: 1em;
-  padding: 2em 0em 3em 2em;
 }
 
 .title {
@@ -41,19 +12,19 @@
 }
 
 .title p:first-child {
-  font-size: 1.5rem;
+  font-size: 1.2em;
   font-weight: 600;
 }
 
 .title p:nth-child(2) {
-  font-size: 1rem;
+  font-size: 0.8em;
 }
 
 .form {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5em;
+  gap: 1.3em;
 }
 
 .inputs_container {
@@ -65,13 +36,18 @@
 .input_label {
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 0.25em;
+}
+
+.label {
+  font-size: 0.8em !important;
 }
 
 .input {
   border-radius: 2em;
-  height: 2.5em;
-  padding: 0px 1em;
+  height: 2.2em;
+  padding: 0em 1em;
+  font-size: 0.8em !important;
 }
 
 .input:focus {
@@ -80,13 +56,15 @@
 }
 
 .btn_navbar {
-  font-size: 1em;
+  font-size: 0.8em !important;
+  height: 2em;
 }
 
 .recover {
   width: auto;
   text-align: center;
   margin: auto;
+  font-size: 0.8em !important;
 }
 
 .p_register {
@@ -94,7 +72,7 @@
 }
 
 .register {
-  margin-left: 5px;
+  margin-left: 0.3em;
   text-align: center;
   color: var(--color-text-third);
 }
@@ -104,43 +82,49 @@
   color: var(--color-text-third);
 }
 
+:is(.login_section,
+  .title,
+  .title p,
+  .form,
+  .inputs_container,
+  .input_label,
+  .label,
+  .input,
+  .btn_navbar,
+  .recover,
+  .p_register,
+  .register,
+) {
+  font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
+}
+
 /* =================== Media querys =================== */
 @media (max-width: 480px) {
-  .column1 {
-    display: none;
-  }
-
   .p_register {
     display: flex;
     flex-direction: column;
     text-align: center;
   }
 
-  .login_container,
-  .column1 img {
+  .login_container {
     box-shadow: none;
-    border-radius: 0em;
+    border-radius: 0em
   }
 }
 
 @media (max-width: 768px) {
-  .container {
-    padding: 2em 0em;
-  }
-
-  .login_container {
-    flex-direction: column;
-    max-width: 600px;
-    max-height: 100%;
-  }
-
-  .column1 img {
-    border-radius: 1em 1em 0 0;
-    height: 400px;
-  }
-
-  .column2 {
-    width: 100%;
-    padding: 2em 2em 3em;
+  :is(.title,
+    .title p,
+    .form,
+    .inputs_container,
+    .input_label,
+    .label,
+    .input,
+    .btn_navbar,
+    .recover,
+    .p_register,
+    .register,
+  ) {
+    font-size: clamp(1.2rem, 1.2vw + 0.7rem, 4rem);
   }
 }
