--- a/src/app/products/page.module.css
+++ b/src/app/products/page.module.css
@@ -1,3 +1,15 @@
 .product_container {
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2em;
+  width: 100%;
+  margin: 0 auto;
+  padding: 3em 2em;
+}
+
+:is(.product_container) {
+  font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
 }
