--- a/src/components/card/page.module.css
+++ b/src/components/card/page.module.css
@@ -1,40 +1,71 @@
 .card_section {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   max-width: 13em;
+  cursor: pointer;
 }
 
-.card {
-  width: 100%;
-  max-width: 30em;
+.card_content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  padding: 0.7em 1em;
+  gap: 0.3em;
 }
 
-.card_img {}
+.info_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  gap: 0.3em;
+}
 
-.img {}
+.title {
+  font-size: 0.8em !important;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+}
 
-.card_content {}
+.hr_line {
+  width: 20%;
+  height: 1px;
+  border: none;
+  background-color: var(--color-purple-900);
+}
 
-.info_content {}
+.price {
+  font-size: 0.85em !important;
+  font-weight: 600;
+}
 
-.title {}
+.card_btn {
+  width: 100%;
+  height: 1.8em;
+}
 
-.price {}
-
-.card_btn {}
-
-.btn {}
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em;
+  background-color: var(--color-purple-900);
+  color: var(--color-text-primary);
+  font-size: 0.8em !important;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 :is(.card_section,
-  .card
-  .card_img,
-  .img,
   .card_content,
   .info_content,
   .title,
@@ -42,4 +73,15 @@
   .card_btn,
   .btn) {
   font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
+}
+
+@media (min-width: 769px) {
+  .btn {
+    background-color: var(--color-background);
+  }
+
+  .card_section:hover .btn {
+    background-color: var(--color-purple-900);
+    transition: 0.3s ease-in-out;
+  }
 }
