--- a/src/components/card/page.module.css
+++ b/src/components/card/page.module.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 0.7em 1em;
+  padding: 0.7em 0.5em;
   gap: 0.3em;
 }
 
@@ -65,23 +65,41 @@
   cursor: pointer;
 }
 
+.modal {
+  height: 100%;
+  max-width: 100%;
+  margin-left: 0em;
+  margin-right: 0em;
+  margin-top: 0em;
+  margin-bottom: 0em;
+}
+
 :is(.card_section,
   .card_content,
   .info_content,
   .title,
   .price,
   .card_btn,
-  .btn) {
+  .btn,
+  .modal) {
   font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
 }
 
 @media (min-width: 769px) {
   .btn {
     background-color: var(--color-background);
+    border: 1px solid var(--color-purple-900);
+    color: var(--color-purple-900);
+    font-weight: 600;
   }
 
   .card_section:hover .btn {
     background-color: var(--color-purple-900);
+    color: var(--color-text-primary);
     transition: 0.3s ease-in-out;
+  }
+
+  .modal {
+    max-width: 40em;
   }
 }
