feat(layout): implement grid layout for RootLayout component

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,9 @@
+.container_layout {
+  display: grid;
+  min-height: 100dvh;
+  grid-template-rows: auto 1fr auto;
+}
+
 .home_container {
   display: flex;
   flex-direction: column;
