--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1em;
+  gap: 0.5em;
   height: 100%;
 }
 
@@ -31,9 +31,28 @@
   min-width: 10em;
 }
 
+.icon_profile {
+  width: 1.6em;
+  fill: var(--color-purple-900);
+}
+
+.icon_cart {
+  margin-left: 0.5em;
+  width: 1.5em;
+  fill: var(--color-purple-900);
+}
+
+.badge_cart {
+  background-color: var(--color-purple-500);
+  color: var(--color-text-primary);
+  border: none;
+  width: 0.8em;
+  height: 0.8em;
+  font-size: 0.6em !important;
+}
+
 .btn_navbar {
-  color: white;
-  width: 10em;
+  color: var(--color-text-secondary);
   height: 2.2em;
   font-size: 0.8em !important;
 }
@@ -71,7 +90,7 @@
 
 .text {
   font-weight: 500;
-  font-size: 0.9em !important;
+  font-size: 0.8em !important;
 }
 
 .menu_item {
@@ -86,13 +105,15 @@
   .container_logo,
   .link_logo,
   .logo_navbar,
+  .icon_cart,
+  .badge_cart,
   .container_btn_navbar,
   .text,
   .navbar_content,
   .btn_navbar,
   .container_text,
   .text,
-  ) {
+) {
   font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
 }
 
