--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -5,6 +5,11 @@
   height: 3em;
 }
 
+.navbar_container>header {
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
 .container_logo {
   height: 100%;
   min-height: 2.5em;
