--- a/src/components/navbar/page.module.css
+++ b/src/components/navbar/page.module.css
@@ -51,8 +51,8 @@
   background-color: var(--color-purple-500);
   color: var(--color-text-primary);
   border: none;
-  width: 0.8em;
-  height: 0.8em;
+  width: 2em;
+  height: 2em;
   font-size: 0.6em !important;
 }
 
@@ -60,22 +60,6 @@
   color: var(--color-text-secondary);
   height: 2.2em;
   font-size: 0.8em !important;
-}
-
-.menu_toggle {
-  width: 50px;
-  padding: 10px;
-  height: 80%;
-  border-radius: 50%;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.menu_toggle:hover {
-  background-color: #E4D4F4;
-}
-
-.menu_toggle:active {
-  background-color: white;
 }
 
 .menu_container {
@@ -98,9 +82,29 @@
   font-size: 0.8em !important;
 }
 
+.profile_menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+  padding: 0.6em;
+  width: 100%;
+}
+
+.icon_profile_menu {
+  width: 2.7em;
+  fill: var(--color-purple-900);
+}
+
+.btn_navbar_menu {
+  color: var(--color-text-secondary);
+  height: 2em;
+  font-size: 1.3em !important;
+}
+
 .menu_item {
-  padding: 0.5em 0em;
-  font-size: 1.8em !important;
+  padding: 0.3em 0em;
+  font-size: 1.1em !important;
   font-weight: 500;
   color: var(--color-text-secondary);
   transition: background-color 0.3s ease-in-out;
@@ -128,6 +132,14 @@
   }
 
   .icon_cart {
-    width: 2em;
+    width: 2.1em;
+  }
+
+  .badge_cart {
+    font-size: 0.7em !important;
+  }
+
+  .container_btn_navbar {
+    margin-right: 1em;
   }
 }
