--- a/src/app/products/[id]/page.module.css
+++ b/src/app/products/[id]/page.module.css
@@ -8,60 +8,133 @@
   align-items: center;
 }
 
-.card_section {
+.first_section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  max-width: 13em;
-  cursor: pointer;
+  max-width: 20em;
+  padding: 0em 1em;
+  gap: 1em;
 }
 
-.card_content {
+.description {
+  width: 100%;
+}
+
+.description p {
+  font-size: 0.8em !important;
+  line-height: 1.1;
+}
+
+.second_section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
-  padding: 0.7em 0.5em;
-  gap: 0.3em;
+  height: 100%;
+  max-width: 20em;
+  padding: 0em 1em;
+  gap: 1em;
 }
 
 .info_content {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 90%;
+  align-items: flex-start;
+  width: 100%;
   gap: 0.3em;
 }
 
 .title {
-  font-size: 0.8em !important;
-  font-weight: 600;
+  font-size: 1.3em !important;
+  font-weight: 500;
   line-height: 1;
   text-align: center;
 }
 
-.hr_line {
-  width: 20%;
-  height: 1px;
-  border: none;
-  background-color: var(--color-purple-900);
+.sku {
+  font-size: 0.7em !important;
+  font-weight: 400;
 }
 
 .price {
-  font-size: 0.85em !important;
+  font-size: 0.9em !important;
+  font-weight: 500;
+  margin: 0.3em 0em;
+}
+
+.btns_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 0.5em;
+}
+
+.btn_top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  min-height: 1.5em;
+  gap: 0.5em;
+}
+
+.btn_bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  min-height: 1.5em;
+  gap: 0.5em;
+}
+
+.btn_cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em;
+  font-size: 0.8em !important;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: var(--color-background);
+  border: 1px solid var(--color-purple-900);
+  color: var(--color-purple-900);
   font-weight: 600;
 }
 
-.card_btn {
-  width: 100%;
-  height: 1.8em;
+.btn_cart:hover {
+  background-color: var(--color-purple-900);
+  color: var(--color-text-primary);
+  transition: 0.3s ease-in-out;
 }
 
-.btn {
+.btn_fav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.4em;
+  height: 100%;
+  min-height: 1.5em;
+  border: 1px solid var(--color-purple-900);
+  cursor: pointer;
+}
+
+.icon_favs {
+  width: 1.3em;
+  fill: var(--color-purple-900);
+}
+
+.btn_buy {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,32 +157,33 @@
   margin-bottom: 0em;
 }
 
-:is(.card_section,
-  .card_content,
+:is(.select_container,
+  .first_section,
+  .description p,
+  .second_section,
   .info_content,
   .title,
+  .sku,
   .price,
-  .card_btn,
-  .btn,
+  .btns_container,
+  .btn_top,
+  .btn_cart,
+  .btn_fav,
+  .btn_bottom,
+  .btn_buy,
   .modal) {
   font-size: clamp(1rem, 1vw + 0.5rem, 4rem);
 }
 
 @media (min-width: 769px) {
-  .btn {
-    background-color: var(--color-background);
-    border: 1px solid var(--color-purple-900);
-    color: var(--color-purple-900);
-    font-weight: 600;
-  }
-
-  .card_section:hover .btn {
-    background-color: var(--color-purple-900);
-    color: var(--color-text-primary);
-    transition: 0.3s ease-in-out;
-  }
 
   .modal {
     max-width: 40em;
+  }
+}
+
+@media (max-width: 768px) {
+  .select_container {
+    flex-direction: column;
   }
 }
